refactor: remove method never called